➕ add Echart library

--- a/app/global.css
+++ b/app/global.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  color-scheme: light;
+}
+
+.card {
+  @apply rounded-2xl border bg-white shadow-soft p-4;
+}
+
 input[type='number'] {
   -moz-appearance: textfield;
   appearance: textfield;
@@ -15,4 +23,9 @@ input[type='number']::-webkit-inner-spin-button {
 input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
 }
